ops_omgx/cloudformation/blockexplorer-blockscout.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: "Enya Blockscout Application Deployment"

Parameters:
  EnvironmentName:
    Type: String
    Default: dev

  ServiceCount:
    Type: Number
    Default: 1

  ImageTag:
    Type: String
    Default: push2aws

  DockerPrefix:
    Type: String
    Default: omgx

  ECRRegistry:
    Type: String
    Default: 942431445534.dkr.ecr.us-east-1.amazonaws.com

  InfrastructureStackName:
    Description: Infrastructure stack to associate this stack with
    Type: String
    Default: infrastructure-coredev

  SecretName:
    Description: AWS Secret Name used for the service
    Type: String
    Default: integration-v2

Conditions:
  IsProduction:
    !Equals [!Ref EnvironmentName, "production"]

Resources:
  TaskRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service: !Sub ecs-tasks.${AWS::URLSuffix}
            Action: sts:AssumeRole
      Policies:
        - PolicyName: AllowAccessToSecrets
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - "secretsmanager:GetResourcePolicy"
                  - "secretsmanager:GetSecretValue"
                  - "secretsmanager:DescribeSecret"
                  - "secretsmanager:ListSecretVersionIds"
                Resource:
                  - arn:aws:secretsmanager:us-east-1:942431445534:secret:*
        - PolicyName: AllowAccessToELB
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - "ec2:AuthorizeSecurityGroupIngress"
                  - "ec2:Describe*"
                  - "elasticloadbalancing:*"
                  - "elasticloadbalancing:Describe*"
                  - "elasticloadbalancing:RegisterInstancesWithLoadBalancer"
                  - "elasticloadbalancing:DeregisterTargets"
                  - "elasticloadbalancing:DescribeTargetGroups"
                  - "elasticloadbalancing:DescribeTargetHealth"
                  - "elasticloadbalancing:RegisterTargets"
                  - "elasticloadbalancing:DeregisterInstancesFromLoadBalancer"
                Resource: "*"

  LoadBalancerBlockscoutSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Sub "SG for ${AWS::StackName} Blockscout LB"
      VpcId:
        Fn::ImportValue: !Sub "${InfrastructureStackName}:VpcId"
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 4000
        ToPort: 4000
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 4000
        ToPort: 4000
        CidrIpv6: ::/0
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIpv6: ::/0
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIpv6: ::/0

      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-Blockscout-LB"

  LoadBalancerBlockscout:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      IpAddressType: ipv4
      Scheme: internet-facing
      SecurityGroups:
      - !Ref LoadBalancerBlockscoutSecurityGroup
      Subnets:
      - Fn::ImportValue: !Sub ${InfrastructureStackName}:PublicSubnet1
      - Fn::ImportValue: !Sub ${InfrastructureStackName}:PublicSubnet2

  DNSRecordV4Graph:
    Type: AWS::Route53::RecordSet
    Properties:
      Type: A
      AliasTarget:
        DNSName:
          Fn::GetAtt:
            - LoadBalancerBlockscout
            - DNSName
        HostedZoneId:
          Fn::ImportValue: !Sub "${InfrastructureStackName}:LoadBalancer:CanonicalHostedZoneID"
      HostedZoneName:
        Fn::Sub:
          - "${DomainName}."
          - DomainName:
              Fn::ImportValue: !Sub "${InfrastructureStackName}:DomainName"
      Name:
        Fn::Sub:
          - "blockexplorer.${DomainName}."
          - DomainName:
              Fn::ImportValue: !Sub "${InfrastructureStackName}:DomainName"

  BlockscoutLBTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Port: 80
      Protocol: HTTP
      VpcId:
        Fn::ImportValue: !Sub "${InfrastructureStackName}:VpcId"
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: 30
      HealthCheckIntervalSeconds: 20
      HealthCheckPath: /health
      HealthCheckProtocol: HTTP # TODO Implement proper healthcheck
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 10
      Matcher:
        HttpCode: 200

  BlockscoutListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref LoadBalancerBlockscout
      Port: 443
      Protocol: HTTPS
      SslPolicy: ELBSecurityPolicy-TLS-1-2-2017-01 # https://docs.aws.amazon.com/elasticloadbalancing/latest/application/create-https-listener.html
      Certificates:
      - CertificateArn: arn:aws:acm:us-east-1:942431445534:certificate/d9758ac0-9b4b-453b-b3c1-21f06abdd4ac
      DefaultActions:
      - Type: forward
        TargetGroupArn: !Ref BlockscoutLBTargetGroup

  BlockscoutLBListenerRule:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      Actions:
        - Type: forward
          TargetGroupArn: !Ref BlockscoutLBTargetGroup
      Conditions:
        - Field: host-header
          HostHeaderConfig:
            Values:
            - !Ref DNSRecordV4Graph
      ListenerArn: !Ref BlockscoutListener
      Priority: 1

  TaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Image: !Sub "${ECRRegistry}/${DockerPrefix}/blockexplorer-blockscout:${ImageTag}"
          Name: blockscout
          Ulimits:
            - Name: core
              SoftLimit: 0
              HardLimit: 0
          PortMappings:
            - ContainerPort: 4000
              HostPort: 0
          Environment:
            - Name: SECRETNAME
              Value: !Ref SecretName
            - Name: COIN
              Value: ETH
            - Name: NETWORK
              Value: Boba
            - Name: SUBNETWORK
              Value: Rinkeby
            - Name: MIX_ENV
              Value: prod
            - Name: ETHEREUM_JSONRPC_VARIANT
              Value: geth
            - Name: LOGO
              Value: /images/boba_logo.svg
            - Name: SUPPORTED_CHAINS
              Value: '[{"title":"Boba Mainnet","url":"https://blockexplorer.boba.network","hide_in_dropdown?": false},{"title":"Boba Rinkeby","url":"https://blockexplorer.rinkeby.boba.network","test_net?":true},{"title":"Boba Rinkeby Integration","url":"https://blockexplorer.rinkeby-integration.boba.network","test_net?":true,"hide_in_dropdown?": true}]'
            - Name: ETHEREUM_JSONRPC_HTTP_URL
              Value: !Sub
                - "http://${EndpointAddress}:8545/rpc"
                - EndpointAddress:
                    Fn::ImportValue: !Sub "${InfrastructureStackName}:LoadBalancerReplica:DNSName"
            - Name: ETHEREUM_JSONRPC_WS_URL
              Value: !Sub
                - "ws://${EndpointAddress}:8545/ws"
                - EndpointAddress:
                    Fn::ImportValue: !Sub "${InfrastructureStackName}:LoadBalancerReplica:DNSName"
            - Name: BLOCKSCOUT_VERSION
              Value: 1.0.0
          EntryPoint:
            - "/entrypoint.sh"
          DockerLabels:
            com.datadoghq.ad.check_names: '["blockscout"]'
            com.datadoghq.ad.init_configs: '[{}]'
            com.datadoghq.ad.logs: '[{"source": "blockscout", "service": "blockscout"}]'
          Essential: true
          Memory: "512"
        - Image: 942431445534.dkr.ecr.us-east-1.amazonaws.com/omgx/nginx-eth-proxy:blockscout
          Name: nginx-blockscout
          PortMappings:
            - ContainerPort: 80
              HostPort: 0
          Command:
            - "nginx-debug"
            - "-g"
            - "daemon off;"
          DockerLabels:
            com.datadoghq.ad.check_names: '["nginx-blockscout"]'
            com.datadoghq.ad.init_configs: '[{}]'
            com.datadoghq.ad.logs: '[{"source": "nginx-blockscout", "service": "nginx-blockscout"}]'
          Essential: true
          Memory: "128"
          Links:
            - blockscout
      NetworkMode: bridge
      TaskRoleArn: !GetAtt TaskRole.Arn
      Family: !Sub "blockscout-${EnvironmentName}"
  ECSService:
    Type: AWS::ECS::Service
    DependsOn: BlockscoutLBListenerRule
    Properties:
      Cluster:
        Fn::ImportValue: !Sub "${InfrastructureStackName}:EcsClusterReplica"
      LoadBalancers:
        - ContainerName: nginx-blockscout
          ContainerPort: 80
          TargetGroupArn: !Ref BlockscoutLBTargetGroup
      DesiredCount: !Ref ServiceCount
      LaunchType: EC2
      SchedulingStrategy: REPLICA
      ServiceName: "blockscout"
      TaskDefinition: !Ref TaskDefinition
